# samurai

./: Cargo.toml  run.sh  samurai_model.pt  spec.md
src/: main.rs
src/game/: aggression.rs  ai.rs  audio.rs  boss.rs  camera.rs  combat.rs  dossier.rs  feel.rs  fusion.rs  hitstop.rs  hud.rs  input.rs  instinct.rs  lockon.rs  memory.rs  memory_systems.rs  mod.rs  player.rs  polish.rs  posture.rs  rush.rs  setup.rs  shake.rs  spectacle.rs  stats.rs  vfx.rs
training/: env.py  train.py
