[package]
name = "samurai"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.0"
tch = "0.22.0"
vibrato-edge = { path = "../vibrato-db/crates/vibrato-edge" }
vibrato-core = { path = "../vibrato-db/crates/vibrato-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"

[dev-dependencies]
tempfile = "3"
